# mars-rec-sys

./: .gitignore  LICENSE  Makefile  README.md  configs.py  dataloader.py  evaluate.py  pyproject.toml  run_all.py  run_experiment.py  trainer.py
appendices/: appendix_a.tex
configs/: config.yaml
context/: Phiếu-đăng-ký-đồ-án.docx
data/: preprocess.py  processed.py
infra/: Dockerfile  compose.yaml
models/: bert4rec.py  bprmf.py  gru4rec.py  gsasrec.py  itemcf.py  popularity.py  sasrec.py
notebooks/: eda.ipynb  sasrecf_pipeline.ipynb
pipeline/: __init__.py  builder.py  confidence.py  item_encoder.py  loaders.py  metadata_utils.py  metrics.py  negative_sampling.py  optim.py  training_grid.py  watch_features.py
report/: README.md  main.tex  preamble.tex
scripts/: aggregate_results.py  build_retroactive_manifest.py  calibration_suite.py  compare_rq1.py  data_quality_audit.py  predict.py  publish_dataset_manifest.py  publish_report_bundle.py  report_rq1.py  restore_mlflow_experiments.py  rq1_compare.py  rq1_migrate.py  rq1_report.py  rq2_alpha_report.py  rq2_compare.py  rq2_compare_variants.py  rq2_report.py  rq2_tune_alpha.py  rq3_build_vocab.py  rq3_compare.py  rq3_precompute_embeddings.py  rq3_report.py  rq3_tune_metadata.py  rq4_ablation.py  rq4_collect.py  rq4_compare.py  rq4_init_protocol.py  rq4_per_user.py  rq4_report.py  rq4_subgroup.py  study_manifest.py  test_mlflow_connection.py  train.py  train_all.py
tests/: conftest.py  test_backbone_smoke.py  test_benchmark_lifecycle.py  test_benchmark_rq1.py  test_bert4rec_masking_policy.py  test_bert4rec_output_vocab.py  test_bert4rec_watch_dataset.py  test_bert4rec_watch_model.py  test_builder_config.py  test_calibration_suite.py  test_compare_rq1.py  test_confidence.py  test_coverage.py  test_data_quality_audit.py  test_dataloader.py  test_early_stopping.py  test_evaldataset_neg_modes.py  test_evaluate_bprmf.py  test_gru4rec_bprmax.py  test_gru4rec_builder.py  test_gru4rec_masking.py  test_gsasrec_loss.py  test_gsasrec_naming.py  test_gsasrec_sequence_loss.py  test_heuristic_eval_protocol.py  test_history_accumulation.py  test_metrics.py  (+57 more)
(+51 files in other folders)
