[project]
name = "mars-rec-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy<=2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "tqdm>=4.66.5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[[tool.uv.index]]
url = "https://pypi.org/simple"
