[project]
name = "mars-rec-sys"
version = "0.1.0"
description = "Sequential course recommendation on the MARS e-learning dataset (7 models, full-sort evaluation, MLflow tracking, RQ1-RQ3 research workflow)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "hydra-core>=1.3.0,<2.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mlflow>=2.15.0,<3.0",
    "nbformat>=4.2.0",
    "numpy<=2",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "statsmodels>=0.14.6",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "tqdm>=4.66.5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[[tool.uv.index]]
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
